@@ -4,6 +4,7 @@ open_bracket        : "{"
 close_bracket       : "}"
 comma               : ","
 date_str            : /\d{4}-\d{2}-\d{2}/
+                    | /\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}/
                     | /\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}.\d{3}(Z)?/
                     | /\d{4}-\d{3}T\d{2}:\d{2}:\d{2}/
                     | DATETIME
